--- a/lib/peterhenrikson/styles/contact.styl
+++ b/lib/peterhenrikson/styles/contact.styl
@@ -1,8 +1,7 @@
 #contact
-  &.parallax
-    background: #000 url("/img/contact.jpg") fixed no-repeat
-    background-size: cover
-
+  background: #000 url("/img/contact.jpg") fixed no-repeat
+  background-size: cover
+  padding-bottom: 50px
   form
     width: 100%
 
@@ -51,3 +50,17 @@
     background-color: #fff
     float: left
     font-size: 12px
+
+.vcard
+  background-color: #111
+  font-size: 24px
+  padding: 20px 0
+  text-align: center
+  color: #fff
+  p
+    margin: 0
+  .tel
+    margin-top: 10px
+
+
+
