--- a/lib/peterhenrikson/styles/style.styl
+++ b/lib/peterhenrikson/styles/style.styl
@@ -7,7 +7,6 @@ dateColor = timeLine
 @import 'nib'
 global-reset()
 @import 'Skeleton/stylesheets/skeleton.css'
-@import 'swiper/dist/idangerous.swiper.css'
 @import 'Font-Awesome/css/font-awesome.css'
 @import 'humane-js/themes/jackedup.css'
 
@@ -74,7 +73,10 @@ p
   &:after
     content: '‡'
 
-
 .shadow
   text-shadow: 0 0 10px rgba(0,0,0,.3),
+               0 0 10px rgba(0,0,0,.3),
                0 0 10px rgba(0,0,0,.3)
+
+.tel a
+  text-decoration: none
