--- a/lib/peterhenrikson/styles/about.styl
+++ b/lib/peterhenrikson/styles/about.styl
@@ -1,4 +1,7 @@
 #about
+  &.parallax
+    background: #000 url("/img/about.jpg") fixed no-repeat
+    background-size: cover
   h1
     font-size: 50px
   text-align: center
@@ -7,6 +10,3 @@
     margin-bottom: 35px
   .tagline
     font-size: 24px
-  a
-    text-decoration: none
-
