--- a/lib/peterhenrikson/styles/sections.styl
+++ b/lib/peterhenrikson/styles/sections.styl
@@ -1,10 +1,9 @@
 section
   position: relative
-  z-index: 1
-  padding-top: 120px
-  padding-bottom: 50px
+  padding: 150px 0
   box-sizing: border-box
   transition: background-color .5s
+  box-shadow: 0 0 20px 5px #000
   &.fullheight
     min-height: 100%
 
@@ -27,7 +26,8 @@ section
   height: 275px
   border-radius: 50%
   overflow: hidden
-  border: 4px solid rgba(255,255,255,.2)
+  border: 8px solid rgba(0,0,0,.3)
+  box-shadow: 0 0 4px #000
   transition: border-color .5s
   &.sm
     width: 225px
