--- a/lib/peterhenrikson/styles/services.styl
+++ b/lib/peterhenrikson/styles/services.styl
@@ -1,19 +1,24 @@
 #services
-  &.parallax
-    background: #000 url("/img/services.jpg") fixed no-repeat
-    background-size: cover
+  background: #000 url("/img/services.jpg") fixed no-repeat
+  background-size: cover
+
   color: #ddd
-  font-size: 18px
+  font-size: 20px
   text-shadow: 0 0 4px rgba(0,0,0,.5),
                0 0 4px rgba(0,0,0,.5)
 
+  .description
+    p
+      padding: 0 10px
+      text-align: justify
+
   .service
-    font-size: 18px
+    font-size: 20px
     text-align: center
     color: #ddd
-    padding-bottom: 15px
+    padding-bottom: 20px
     h2
       margin-bottom: 5px
       font-size: 28px
     p
-      padding: 0 20px
+      padding: 0 15px
