--- a/lib/peterhenrikson/styles/work.styl
+++ b/lib/peterhenrikson/styles/work.styl
@@ -1,40 +1,25 @@
 .work
-  background-color: #000
-
-.swiper-container
-  height: 100%
+  background: #111
 
 .panel
-  position: relative
+  margin: 0 auto 100px auto
+
+.project
+  display: block
+  text-decoration: none
+  max-width: 300px
   width: 100%
-  height: 500px
-  box-sizing: border-box
-  padding: 30px 40px
-
-  .arrow
-    position: absolute
-    top: 50%
-    margin-top: 15px
-    width: 17px
-    height: 30px
-    border: none
-    cursor: pointer
-    outline: none
-    background-image: url(img/arrows.png)
-    background-repeat: no-repeat
-    background-color: transparent
-    &.left
-      background-position: left top
-      left: 10px
-    &.right
-      background-position: left bottom
-      right: 10px
-
-.content-slide
-  padding: 20px
-  color: #fff
-  h3
-    text-align: center
-    margin-bottom: 5px
+  margin-bottom: 10px
+  line-height: 0
+  overflow: hidden
+  border-radius: 5px
   img
     width: 100%
+
+  h3
+    text-align: center
+    padding: 5px 0
+    font-size: 16px
+    background-color: #000
+    color: #fff
+
