--- a/lib/peterhenrikson/styles/splash.styl
+++ b/lib/peterhenrikson/styles/splash.styl
@@ -1,7 +1,7 @@
 #home
-  &.parallax
-    background: url("/img/splash.jpg") fixed no-repeat
-    background-size: cover
+  background: url("/img/splash.jpg") fixed no-repeat
+  background-size: cover
+  padding-top: 75px
 
   h1
     line-height: 120%
@@ -17,7 +17,6 @@
       font-weight: normal
       margin-top: 20px
       color: rgba(255,255,255,.9)
-
 
   .logo
     width: 200px
