--- a/lib/peterhenrikson/styles/sections.styl
+++ b/lib/peterhenrikson/styles/sections.styl
@@ -30,6 +30,7 @@ section
 
   img
     width: 100%
+    border-radius: 50%
     display: block
 
 /* Smaller than standard 960 (devices and browsers) */
