--- a/lib/peterhenrikson/views/_project_slide.slim
+++ b/lib/peterhenrikson/views/_project_slide.slim
@@ -1,6 +1,6 @@
 a.project href=item.url
   - if item.featuredPhoto
-    img src=item.featuredPhoto.src
+    img src=item.featuredPhoto.url
   - else
     img src="/img/logo.png"
   h3 #{item.title}
