--- a/lib/peterhenrikson/views/index.slim
+++ b/lib/peterhenrikson/views/index.slim
@@ -61,21 +61,20 @@ section#services.fullheight.shadow
 a#work
 section.work.timberframing.fullheight
   .container
-    h1 Timber Framing
-    .panel
-      == partial :project_slide, :collection => timberframing
+    .row.sixteen.columns
+      h1 Timber Framing
+      .panel
+        == partial :project_slide, :collection => timberframing
 
-section.work.grindbygg.fullheight
-  .container
-    h1 Grindbygg
-    .panel
-      == partial :project_slide, :collection => grindbygg
+    .row.sixteen.columns
+      h1 Grindbygg
+      .panel
+        == partial :project_slide, :collection => grindbygg
 
-section.work.design.fullheight
-  .container
-    h1 Design
-    .panel
-      == partial :project_slide, :collection => design
+    .row.sixteen.columns
+      h1 Design
+      .panel
+        == partial :project_slide, :collection => design
 
 section#contact.parallax
   h1.shadow Contact Me
