--- a/lib/peterhenrikson/styles/work.styl
+++ b/lib/peterhenrikson/styles/work.styl
@@ -1,25 +1,6 @@
-.work
-  background: #111
+#work
+  background: #000 url("/img/projects.jpg") fixed no-repeat
+  background-size: cover
 
 .panel
   margin: 0 auto 100px auto
-
-.project
-  display: block
-  text-decoration: none
-  max-width: 300px
-  width: 100%
-  margin-bottom: 10px
-  line-height: 0
-  overflow: hidden
-  border-radius: 5px
-  img
-    width: 100%
-
-  h3
-    text-align: center
-    padding: 5px 0
-    font-size: 16px
-    background-color: #000
-    color: #fff
-
