--- a/lib/peterhenrikson/views/_nav.slim
+++ b/lib/peterhenrikson/views/_nav.slim
@@ -6,10 +6,10 @@ nav style="#{(request.path!="/" ? "position:fixed" : "")}"
     h1.brand Peter Henrikson
   ul
     li
-      a.scroll href='/#about' <i class='fa fa-user'></i>&nbsp;&nbsp;about
-    li
       a.scroll href='/#services'  <i class='fa fa-cogs'></i>&nbsp;&nbsp;services
     li
       a.scroll href='/#work' <i class='fa fa-briefcase'></i>&nbsp;&nbsp;work
+    li
+      a href='/plans' <i class='fa fa-shopping-cart'></i>&nbsp;&nbsp;buy plans
     li
       a.scroll href='/#contact' <i class='fa fa-phone'></i>&nbsp;&nbsp;contact
