--- a/lib/peterhenrikson/views/_product.slim
+++ b/lib/peterhenrikson/views/_product.slim
@@ -1,7 +1,7 @@
-a.project href=item.url
+a.masonry href=item.url
   - if item.featuredPhoto
     img src=item.featuredPhoto.url
   - else
-    img src="/img/logo.png"
+    img src="/img/default.jpg"
   h3 #{item.title}
 
