--- a/lib/peterhenrikson/views/timeline.slim
+++ b/lib/peterhenrikson/views/timeline.slim
@@ -1,5 +1,5 @@
-section#work.fullheight
-  h1 My Work
+section#fullheight
+  h1 My History
   .container
     ul.timeline
       == partial :timeline_entry, :collection => timeline
