fix fullheight for work section

--- a/lib/peterhenrikson/views/index.slim
+++ b/lib/peterhenrikson/views/index.slim
@@ -63,20 +63,23 @@ section#services.fullheight.shadow
 a#work
 section#work.shadow
   .container
-    .row.sixteen.columns.fullheight
-      h1 Timber Framing
-      .panel
-        == partial :project, :collection => timberframing
+    .fullheight
+      .row.sixteen.columns
+        h1 Timber Framing
+        .panel
+          == partial :project, :collection => timberframing
 
-    .row.sixteen.columns.fullheight
-      h1 Grindbygg
-      .panel
-        == partial :project, :collection => grindbygg
+    .fullheight
+      .row.sixteen.columns
+        h1 Grindbygg
+        .panel
+          == partial :project, :collection => grindbygg
 
-    .row.sixteen.columns.fullheight
-      h1 Design
-      .panel
-        == partial :project, :collection => design
+    .fullheight
+      .row.sixteen.columns
+        h1 Design
+        .panel
+          == partial :project, :collection => design
 
 a#contact
 section#contact.parallax
