fix fullheight issue

--- a/lib/peterhenrikson/views/index.slim
+++ b/lib/peterhenrikson/views/index.slim
@@ -61,25 +61,22 @@ section#services.fullheight.shadow
         p Constructing small and unique frames using traditional joinery with the subtle effects of hand tools.
 
 a#work
-section#work.shadow
+section#work.shadow.fullheight
   .container
     .fullheight
-      .row.sixteen.columns
-        h1 Timber Framing
-        .panel
-          == partial :project, :collection => timberframing
+      h1 Timber Framing
+      .panel
+        == partial :project, :collection => timberframing
 
     .fullheight
-      .row.sixteen.columns
-        h1 Grindbygg
-        .panel
-          == partial :project, :collection => grindbygg
+      h1 Grindbygg
+      .panel
+        == partial :project, :collection => grindbygg
 
     .fullheight
-      .row.sixteen.columns
-        h1 Design
-        .panel
-          == partial :project, :collection => design
+      h1 Design
+      .panel
+        == partial :project, :collection => design
 
 a#contact
 section#contact.parallax
