--- a/lib/peterhenrikson/styles/style.styl
+++ b/lib/peterhenrikson/styles/style.styl
@@ -27,7 +27,7 @@ html, body
   font-weight: 300
   min-width: 240px
   line-height: 150%
-  background-color: #111
+  background: #111 url("/img/wood.png")
 
 a
   color: #fff
@@ -89,8 +89,6 @@ section
   box-shadow: 0 0 20px 5px #000
   &.fullheight
     min-height: 100%
-  &.smallpad
-    padding: 120px 0 0 0
 
   h1
     display: block
