--- a/lib/peterhenrikson/styles/project-product.styl
+++ b/lib/peterhenrikson/styles/project-product.styl
@@ -1,12 +1,50 @@
 #project, #product
-  background: #000 url("/img/wood.png")
   color: #eee
+  padding: 100px 40px 40px 40px
 
   h1
     text-align: left
 
   img
     width: 100%
-    border-radius: 5px;
+    border-radius: 5px
     box-shadow: 0 0 10px rgba(0,0,0,.3)
 
+
+.slider
+  overflow: hidden
+  visibility: hidden
+  position: relative
+  padding: 20px 0
+
+  .wrap
+    overflow: hidden
+    position: relative
+    div
+      float: left
+      width: 100%
+      position: relative
+
+.slider-position
+  text-align: center
+  list-style: none
+  margin: 0
+  padding: 0
+  div
+    color: #fff
+    display: inline-block
+    line-height: 25px
+    width: 25px
+    height: 25px
+    font-size: 14px;
+    border-radius: 5px
+    background: #141414
+    box-shadow: inset 0 1px 3px black,
+                      0 0 1px 1px #202020
+    margin: 0 5px
+    cursor: pointer
+    &.on
+      box-shadow: inset 0 1px 3px -1px #28b4ea,
+                        0 1px 2px rgba(0,0,0,.5)
+      background-color: #1293dc
+      background-image: linear-gradient(top, #1293dc, #0f6297)
